add user name and picture to header

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -18,6 +18,10 @@
   background: #888;
 }
 
+.button--important {
+  background: #9c1a1a;
+}
+
 .button--with-icon {
   width: 100%;
   margin: $s-size 0 0 0;
